# Bilayer_Soft_Robots_Sim

./: .gitignore  CMakeLists.txt  README.md  option.txt
inputdata/: bendingInput.txt  coupleBend.txt  coupleEdge.txt  edgeInput.txt  nodesInput.txt
src/: README.md  eigenIncludes.h  elasticPlate.cpp  elasticPlate.h  main.cpp  timeStepper.cpp  world.cpp  world.h
src/mechanics/: base_force.cpp  base_force.h
src/mechanics/constraints/: constrainedForce.cpp  constrainedForce.h  elasticBendingBound.cpp  elasticBendingBound.h  elasticTwistingBound.cpp  elasticTwistingBound.h  symbolicEquations.cpp  symbolicEquations.h
src/mechanics/forces/: dampingForce.cpp  dampingForce.h  elasticBendingForce.cpp  elasticBendingForce.h  elasticStretchingForce.cpp  elasticStretchingForce.h  elasticTwistingForce.cpp  elasticTwistingForce.h  externalGravityForce.cpp  externalGravityForce.h  inertialForce.cpp  inertialForce.h
src/mechanics/forces/old/: elasticBendingForce.cpp  elasticBendingForce.h  elasticStretchingBound.cpp  elasticStretchingBound.h  elasticTwistingForce.cpp
src/old/: elasticAngleBound.cpp  elasticAngleBound.h  elasticPlate.cpp  elasticPlate.h
